lame库捕捉mp3有点问题。现在尝试使用mic-recorder-to-mp3，又尝试使用vmsg。vmsg库基本解决了这个问题。now develop shiziliang

--- a/ise-demo/语音评测接口要求.md
+++ b/ise-demo/语音评测接口要求.md
@@ -137,3 +137,49 @@ app_id	string	是	在平台申请的APPID信息
 | rst           | string | 否   | 评测返回结果与分制控制（评测返回结果与分制控制也会受到ise_unite与plev参数的影响）  <br>完整：entirety（默认值）  <br>中文百分制推荐传参（rst="entirety"且ise_unite="1"且配合extra_ability参数使用）  <br>英文百分制推荐传参（rst="entirety"且ise_unite="1"且配合extra_ability参数使用）  <br>精简：plain（评测返回结果将只有总分），如：  <br><?xml version="1.0" ?><FinalResult><ret value="0"/><total_score value="98.507320"/></FinalResult>                                                                                     | "entirety"             |
 | ise_unite     | string | 否   | 返回结果控制  <br>0：不控制（默认值）  <br>1：控制（extra_ability参数将影响全维度等信息的返回）                                                                                                                                                                                                                                                                                                                                                                    | "0"                    |
 | plev          | string | 否   | 在rst="entirety"（默认值）且ise_unite="0"（默认值）的情况下plev的取值不同对返回结果有影响。  <br>plev：0(给出全部信息，汉语包含rec_node_type、perr_msg、fluency_score、phone_score信息的返回；英文包含accuracy_score、serr_msg、 syll_accent、fluency_score、standard_score、pitch信息的返回)                                                                                                                                                                                                     | "0"                    |
+
+
+# 结果字段说明
+
+read_syllable层级字段说明：
+属性	注释
+phone_score	声韵分
+fluency_score	流畅度分（暂会返回0分）
+tone_score	调型分
+total_score	总分
+beg_pos/end_pos	始末位置（单位：帧，每帧相当于10ms)
+content	试卷内容
+time_len	时长（单位：帧，每帧相当于10ms）
+
+sentence层级字段说明：
+属性	注释
+time_len	时长（单位：帧，每帧相当于10ms）
+beg_pos/end_pos	始末位置（单位：帧，每帧相当于10ms)
+content	试卷内容
+
+word层级字段说明：
+属性	注释
+beg_pos / end_pos	始末位置（单位：帧，每帧相当于10ms)
+symbol	拼音：数字代表声调，5表示轻声
+content	试卷内容
+time_len	时长（单位：帧，每帧相当于10ms)
+
+
+
+syll层级字段说明：
+属性	注释
+beg_pos / end_pos	始末位置（帧）
+dp_message	增漏信息，0(正确）16(漏读）32(增读）64(回读）128(替换）
+symbol	拼音：数字代表声调，5表示轻声
+content	试卷内容
+rec_node_type	paper(试卷内容）,sil(非试卷内容）
+time_len	时长（单位：帧，每帧相当于10ms)
+phone层级字段说明：
+
+属性	注释
+beg_pos / end_pos	始末位置（单位：帧，每帧相当于10ms)
+dp_message	增漏信息，0(正确）16(漏读）32(增读）64(回读）128(替换）
+content	试卷内容
+rec_node_type	paper(试卷内容）,sil(非试卷内容）
+perr_msg	错误信息：1(声韵错）2(调型错）3(声韵调型错），当dp_message不为0时，perr_msg可能出现与dp_message值保持一致的情况
+time_len	时长（单位：帧，每帧相当于10ms)
